--- a/src/assets/styles/projects.css
+++ b/src/assets/styles/projects.css
@@ -9,3 +9,11 @@
 .projectsImg{
     opacity: 0.4 !important;
 }
+
+.roundedBox{
+    border-radius: 35px;
+}
+
+.projectImg{
+    border-radius: 35px;
+}
