--- a/src/assets/styles/nav.css
+++ b/src/assets/styles/nav.css
@@ -10,7 +10,7 @@ nav {
   padding-right: 1.5%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: #fff;
   height: 65px;
@@ -19,33 +19,24 @@ nav {
   border-radius: 40px;
   margin-top: 10px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
-}
-
-nav .logo {
-  display: flex;
-  align-items: center;
-}
-
-nav .logo img {
-  height: 2.2rem;
-  width: auto;
-  /*padding: 2px;*/
-  background-color: rgb(45, 45, 45);
-  border-radius: 15px;
+  position: relative;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  justify-content: right; 
-  flex-grow: 1;
+  justify-content: center; 
+  align-items: center;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 nav ul li {
-  margin-left: 1.5rem;
+  margin: 0 1rem;
 }
 
 nav ul li a {
@@ -59,6 +50,34 @@ nav ul li a {
 
 nav ul li a:hover {
   color: #4b5563 !important;
+}
+
+.contact-button {
+  position: absolute;
+  right: 1.5%;
+}
+
+.contact-button a {
+  border-radius: 35px;
+  padding: 12px 17px;
+  color: #fff !important;
+  background: linear-gradient(to bottom, #ff80bf, #ea9c9c) !important;
+  cursor: pointer;
+  font-size: 0.88rem;
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+.contact-button a:hover {
+  color: #000 !important;
+}
+
+.mobile-only {
+  display: none;
+}
+
+.desktop-only {
+  display: block;
 }
 
 .navButton {
@@ -129,7 +148,7 @@ nav ul li a:hover {
   position: absolute;
   top: 0;
   left: -60%;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: flex-start;
   width: 60%;
@@ -254,9 +273,14 @@ form button {
 @media screen and (max-width: 1024px) {
   .hamburger {
     display: block;
+    position: absolute;
+    right: 3%;
   }
   nav ul {
     display: none;
+  }
+  .menubar {
+    display: flex;
   }
   .menubar.active ul {
     display: flex;
@@ -265,6 +289,18 @@ form button {
     padding-right: 5%;
     width: 90%;
     padding-left: 5%;
+  }
+  .mobile-only {
+    display: block;
+    position: absolute;
+    left: 3%;
+  }
+  .desktop-only {
+    display: none;
+  }
+  .contact-button {
+    position: absolute;
+    left: 3%;
   }
   .navButton {
     border-radius: 35px !important;
