--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -1,20 +1,23 @@
 .footer{
     width: 98%;
-    background-color: #fff;
+    background-color: var(--gris-oscuro);
     border-radius: 35px 35px 0px 0px;
     height: auto;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
     overflow-x: hidden;
     margin: 0 auto;
+    color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 .email{
     text-decoration: none;
-    color: #3a3a3a;
+    color: var(--gris-claro);
 }
 
 .icon{
-    color: #000000;
+    color: #fff;
 }
 
 .legalLinks {
