--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -5,7 +5,12 @@
   align-items: center;
   padding: 0 50px;
   position: relative;
-  z-index: 1;
+  z-index: 0 !important;
+}
+
+.about-section * {
+  position: relative;
+  z-index: 0 !important;
 }
 
 .about-section .bg-white {
