--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -1,6 +1,6 @@
 .footer{
     width: 98%;
-    background-color: var(--gris-oscuro);
+    background-color: var(--negro-mate);
     border-radius: 35px 35px 0px 0px;
     height: auto;
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
@@ -17,7 +17,12 @@
 }
 
 .icon{
-    color: #fff;
+    color: var(--rosa-principal);
+    transition: color 0.3s ease;
+}
+
+.icon:hover{
+    color: var(--rosa-claro);
 }
 
 .legalLinks {
